...
                }
            }
            if (onSettings != null) {
                SettingsGroup(Modifier.padding(vertical = 16.dp)) {
                    row {
                        SettingsAction(stringResource(R.string.add_profile), onAddProfile,
                            modifier = Modifier.testTag("profile_switcher.add_profile"),
                            leading = { Icon(painterResource(R.drawable.ic_settings_person_add), null) })
                    }
                    row {
                        SettingsAction(stringResource(R.string.ui_settings), onSettings,
                            modifier = Modifier.testTag("profile_switcher.settings"),
                            leading = { Icon(painterResource(R.drawable.ic_emoji_settings), null) })
                    }
                }
            } else WhiteNoiseButton(
                onClick = onAddProfile,
                modifier = Modifier
...
